--- a/csit-ibelong/css/style.css
+++ b/csit-ibelong/css/style.css
@@ -13,9 +13,36 @@ div.gallery {
   margin: 5px;
   border: 1px solid #ccc;
   float: left;
-  width: 180px;
+  width: 30%;
+}
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
+.topnav {
+  overflow: hidden;
+  background-color: #80ced6;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: blue;
+}
+
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
 /* TODO: Change styling to your colour scheme - See W3 Schools for help */
 div.gallery:hover {
   border: 1px solid #777;
@@ -34,4 +61,12 @@ div.desc {
 h2 {
   font-size: 40px;
   background-color: red;
+}
+body { 
+    background-color: grey;
+}
+
+#image-1 {
+    width: 50%;
+    height: 50%;
 }
